# umiaq-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  index.html
.github/workflows/: pages.yml
pkg/: README.md  package.json  umiaq.d.ts  umiaq.js  umiaq_bg.wasm  umiaq_rust.d.ts  umiaq_rust.js  umiaq_rust_bg.wasm  umiaq_rust_bg.wasm.d.ts
src/: bindings.rs  comparison_operator.rs  constraints.rs  errors.rs  joint_constraints.rs  lib.rs  main.rs  parser.rs  patterns.rs  scan_hints.rs  solver.rs  umiaq_char.rs  wasm.rs  wordlist.rs
src/parser/: form.rs  matcher.rs  mod.rs  prefilter.rs  utils.rs
tests/fixtures/: test_wordlist.txt
web/: examples.html  index.html  skeleton-dark.css  solver.worker.js  umiaq.css  wordlist.js
