[package]
name = "umiaq-rust"
version = "0.1.0"
edition = "2024"
description = "A Qat-like equation solver"
repository = "https://github.com/crosswordnexus/umiaq"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "umiaq"
path = "src/main.rs"

[dependencies]
nom = "8.0.0"
clap = { version = "4.5.45", features = ["derive"] }
thiserror = "1.0"
lazy_static = "1.4"
fancy-regex = "0.16.1"

# --- WASM-only deps (compiled only when target_arch = "wasm32") ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
