[package]
name = "umiaq-rust"
version = "0.1.0"
edition = "2024"
description = "A Qat-like equation solver"
repository = "https://github.com/Crossword-Nexus/umiaq"
license = "MIT"
default-run = "umiaq"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "umiaq"
path = "src/main.rs"

[[bin]]
name = "bench_local"
path = "src/bin/bench_local.rs"

[dependencies]
nom = "8.0.0"
clap = { version = "4.5.45", features = ["derive"] }
thiserror = "2.0.15"
fancy-regex = "0.16.1"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

# --- WASM-only deps (compiled only when target_arch = "wasm32") ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
